# Quantara

./: .env.example  CHANGELOG.md  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  security_disclosure.md
.github/workflows/: bandit.yml  ci.yml  codeql.yml  docs-check.yml  frontend_tests.yml  integration-tests.yml  load-test.yml  pylint.yml  release.yml  shared_workflow.yml  soroban.yml  soroban_fuzz.yml  stale.yml  trivy.yml
common/: pausable.rs
devops/: docker-compose.quantara.yaml
docs/: CHANGELOG.md  contract_deploy.md  environment_variables.md
docs/architecture/c4/: README.md  component.puml  container.puml  context.puml
docs/gas/: 0.1.0.md
docs/security/: threat-model.md
quantara/: .env.dev  entrypoint.sh  pyproject.toml
quantara/frontend/: .eslintrc.json  i18next-scanner.config.cjs  index.html  package.json  tailwind.config.js  tsconfig.base.json  tsconfig.json  tsconfig.strict.json  vite.config.mjs  vitest.setup.js
quantara/frontend/src/: App.jsx  globals.css  i18n.js  index.jsx  main.jsx  vite-env.d.ts
quantara/frontend/test/: ActionModal.test.jsx  Form.a11y.test.jsx  telemetry.test.jsx  walletconnect.test.jsx
quantara/soroban/: Cargo.toml
quantara/soroban/adapters/: CollateralManager.py
quantara/soroban/contracts/: Cargo.toml  deny.toml
quantara/soroban/contracts/vault/: Cargo.toml
quantara/soroban/contracts/vault/fuzz/: Cargo.toml
quantara/soroban/contracts/vault/fuzz/fuzz_targets/: fuzz_vault_deposit.rs  fuzz_vault_withdraw.rs
quantara/soroban/contracts/vault/src/: lib.rs  test.rs
quantara/soroban/contracts/vault/test_snapshots/test/: test_deposit.1.json
quantara/soroban/tests/: test_collateral_manager.py  test_collateral_manager_props.py
quantara/web_app/: __init__.py  alembic.ini  config_validator.py  pytest.ini  tracing.py
quantara/web_app/alembic/: env.py
quantara/web_app/api/: auth.py  errors.py  main.py  middleware.py  openapi.py  pausable.py  position.py  rate_limiter.py  referal.py  session.py  telegram.py  user.py  vault.py  wallet_auth.py  walletconnect.py
quantara/web_app/contract_tools/: api_request.py  blockchain_call.py  cache.py  constants.py  ekubo_research.py
quantara/web_app/db/: database.py  models.py  seed_data.py
quantara/web_app/tasks/: outbox_relay.py
scripts/: profile_contracts.sh
tests/load/: dashboard.js  health.js  leaderboard.js
(+111 files in other folders)
